crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@missing-dependency.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/mod.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64'
    Diagnostic severity: error
    Caused by: the requirement 'vc14_runtime >=14.29.30139' could not be satisfied (required by 'pixi-0.15.2-h7ea99a0_0.conda')
