crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@non-binary-no-build.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/tests.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project
    Diagnostic severity: error
    Caused by: the lock file contains non-binary package: 'sdist', but the pypi-option `no-build` is set
