crates/pixi_core/src/lock_file/satisfiability/snapshots/pixi_core__lock_file__satisfiability__tests__failing_satisfiability@pypi-index-added.snap
---
source: crates/pixi_core/src/lock_file/satisfiability/tests.rs
expression: s
---
environment 'default' does not satisfy the requirements of the project for platform 'win-64'
    Diagnostic severity: error
    Caused by: 'my-dep' requires index https://custom.example.com/simple but the lock file has https://pypi.org/simple
